--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Images
+
+*.png
+*.PNG
+*.jpg
+*.JPG
+
+
+##############################################################################
+# Python
+##############################################################################
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
